<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/graph"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:padding="16dp"
    tools:context=".ui.graph.GraphFragment">

    <Button
        android:id="@+id/btGraphOneYear"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/action_period_1y"
        app:layout_constraintEnd_toStartOf="@id/btGraphSixMonths"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btGraphSixMonths"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/action_period_6m"
        app:layout_constraintEnd_toStartOf="@id/btGraphThreeMonths"
        app:layout_constraintStart_toEndOf="@id/btGraphOneYear"
        app:layout_constraintTop_toTopOf="@+id/btGraphOneYear" />

    <Button
        android:id="@+id/btGraphThreeMonths"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/action_period_3m"
        app:layout_constraintEnd_toStartOf="@id/btGraphOneMonth"
        app:layout_constraintStart_toEndOf="@id/btGraphSixMonths"
        app:layout_constraintTop_toTopOf="@+id/btGraphSixMonths" />

    <Button
        android:id="@+id/btGraphOneMonth"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/action_period_1m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btGraphThreeMonths"
        app:layout_constraintTop_toTopOf="@+id/btGraphThreeMonths" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lcGraphChart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="320dp"
        app:layout_constraintHeight_min="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btGraphOneYear" />

    <ProgressBar
        android:id="@+id/pbGraphProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chart_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="160dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
